[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
madtofan-microservice-common = { path = "../common" }
anyhow = "1.0.68"
async-trait = "0.1.63"
mockall = "0.11.3"
sqlx = { version = "0.6.2", features = [
  "runtime-tokio-rustls",
  "postgres",
  "time",
  "offline",
] }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
tracing = "0.1.37"
dotenv = "0.15.0"
clap = { version = "4.1.4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
rust-argon2 = "1.0.0"
